# Battaglia_navale

./: .gitignore  CMakeList.txt  CMakeLists.txt  Test_Griglia.cpp  computer_vs_computer.txt  human_vs_computer.txt  log.txt  log_santo.txt  readme.txt
docs/test/: Test_Griglia.cpp
include/: Griglia.h  Naval_battle.h  Sottomarino.h  Supporto.h
include/Griglia/: Griglia.h  Griglia_difesa.h
include/Naval_battle/: Naval_battle.h
include/Naval_units/: .NavalUnits.hpp.kate-swp  Corazzata.h  Naval_units.h  Sottomarino.h  Supporto.h
include/Replay/: Replay.h
lib/: Naval_battle.cpp  Sottomarino.cpp  Supporto.cpp
lib/Griglia/: Griglia.cpp  Griglia.hpp  Griglia_difesa.hpp
lib/NavalUnits/: Corazzata.cpp
lib/Naval_battle/: Naval_battle.cpp  Naval_battle.hpp
lib/Naval_units/: Corazzata.cpp  Corazzata.hpp  Sottomarino.cpp  Sottomarino.hpp  Supporto.cpp  Supporto.hpp
lib/Replay/: Replay.cpp  Replay.hpp
src/: Griglia.hpp  NavalUnits.hpp  Sottomarino.cpp  Supporto.cpp  battaglia_navale.cpp  replay.cpp
